RESOLVED FIXED160775
Regression(r204268): Mail crashes when trying to compose an email
https://bugs.webkit.org/show_bug.cgi?id=160775
Summary Regression(r204268): Mail crashes when trying to compose an email
Chris Dumez
Reported 2016-08-11 12:20:50 PDT
Regression(r204268): Mail crashes when trying to compose an email: Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed: 0 WebCore 0x0000000101ed5770 WebCore::Page::Page(WebCore::PageConfiguration&&) + 788 1 WebCore 0x0000000101ed5710 WebCore::Page::Page(WebCore::PageConfiguration&&) + 692 2 WebKitLegacy 0x000000010471f200 -[WebView(WebPrivate) initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:] + 1388 3 UIKit 0x0000000194b55414 -[UIWebDocumentView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:] + 176
Attachments
Patch (1.65 KB, patch)
2016-08-11 12:22 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2016-08-11 12:22:05 PDT
Chris Dumez
Comment 2 2016-08-11 12:23:56 PDT
Comment on attachment 285843 [details] Patch Clearing flags on attachment: 285843 Committed r204381: <http://trac.webkit.org/changeset/204381>
Chris Dumez
Comment 3 2016-08-11 12:24:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.