Regression(r204268): Mail crashes when trying to compose an email https://bugs.webkit.org/show_bug.cgi?id=160775

Reviewed by Anders Carlsson.

Properly initialize PageConfiguration.pluginInfoProvider in
[WebView initSimpleHTMLDocumentWithStyle] to avoid a null
dereference in Mail when trying to compose an email.

* WebView/WebView.mm:
(-[WebView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:]):

Canonical link: https://commits.webkit.org/178892@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204381 268f45cc-cd09-0410-ab3c-d52691b4dbfc